fixed display on mobile

--- a/main.css
+++ b/main.css
@@ -85,26 +85,29 @@ a:hover {
     width: 100%;
     height: 20%;
     display: inline-flex;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     background-color: rgb(26, 26, 26);
+    border-radius: 10px;
+    padding: 10px;
+    text-overflow: ellipsis;
 }
 
 .thumbnail {
-    width: 150px;
-    height: 150px;
+    width: 100px;
+    height: 100px;
     position: relative;
     top: 50%;
-    left: 50px;
+    left: 20px;
     transform: translateY(-50%);
 }
 
 .headline {
     position: relative;
     font-family: 'Courier New', Courier, monospace;
-    font-size: 3.5vw;
+    font-size: calc(100% + 3vw);
     color: white;
     text-decoration: none;
     top: 50%;
-    left: 100px;
+    left: 80px;
     transform: translateY(-20%);
 }
